Separate tests env in tox for ut and style check

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,16 @@
 [tox]
-envlist = cleanup,py27
+envlist = pep8,py27
 
 usedevelop = True
 
-[testenv]
+[testenv:py27]
 usedevelop=True
 setenv = COVERAGE_FILE = .coverage
-commands = py.test --cov=c64img --cov-report=term-missing --pep8
+commands = py.test --cov=c64img --cov-report=term-missing
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 
-[testenv:cleanup]
-setenv =
-COVERAGE_FILE = .coverage
-deps = coverage
-commands = coverage erase
+[testenv:pep8]
+usedevelop=True
+deps = flake8
+commands = flake8 c64img tests
