--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = pep8,py27
+envlist = pep8,py27,py35,py36
 
 usedevelop = True
 
-[testenv:py27]
+[testenv]
 usedevelop=True
 setenv = COVERAGE_FILE = .coverage
 commands = py.test --cov=c64img --cov-report=term-missing
